let's try that one

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "id": "0aed9ef2",
    "metadata": {},
    "outputs": [
@@ -13,12 +13,18 @@
       "connecting to database\n",
       "database connected\n",
       "('ADHD is overdiagnosed',)\n",
+      "('asfadfasf',)\n",
       "('dopamine wild card baby',)\n",
+      "('hello world',)\n",
+      "('June the dog',)\n",
       "('object permanence',)\n",
       "('Ugh, neurotypicals',)\n",
       "rows retrieved\n",
       "(log) Bingo list includes... ADHD is overdiagnosed\n",
+      "asfadfasf\n",
       "dopamine wild card baby\n",
+      "hello world\n",
+      "June the dog\n",
       "object permanence\n",
       "Ugh, neurotypicals\n",
       "\n"
@@ -51,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "id": "21e4b77b",
    "metadata": {},
    "outputs": [
@@ -59,43 +65,163 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "connecting to database\n"
-     ]
-    },
-    {
-     "ename": "SyntaxError",
-     "evalue": "syntax error at or near \"hello\"\nLINE 2:         VALUES (''hello world'', 'emma')\n                          ^\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mSyntaxError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-7da1797c67e8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Cursor Closed\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mbingoadd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"hello world\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-8-7da1797c67e8>\u001b[0m in \u001b[0;36mbingoadd\u001b[0;34m(item)\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mconn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpsycopg2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msslmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'require'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mcursor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery_sql\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Adding {item} to bingolist.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mSyntaxError\u001b[0m: syntax error at or near \"hello\"\nLINE 2:         VALUES (''hello world'', 'emma')\n                          ^\n"
+      "connecting to database\n",
+      "auuuugh\n"
      ]
     }
    ],
    "source": [
     "def bingoadd(item):\n",
-    "    query_sql = f\"\"\"INSERT INTO public.bingolist (key, server)\n",
-    "        VALUES (''{item}'', 'emma')\"\"\"\n",
-    "    print(\"connecting to database\")\n",
-    "    conn = psycopg2.connect(db, sslmode='require')\n",
-    "    cursor = conn.cursor()\n",
-    "    cursor.execute(query_sql)\n",
-    "    print(f\"Adding {item} to bingolist.\")\n",
-    "    if(conn):\n",
-    "        cursor.close()\n",
-    "        conn.close()\n",
-    "        print(\"Cursor Closed\")\n",
+    "    try:\n",
+    "        query_sql = f\"\"\"INSERT INTO public.bingolist (key, server)\n",
+    "            VALUES ('{item}', 'emma')\"\"\"\n",
+    "        print(\"connecting to database\")\n",
+    "        conn = psycopg2.connect(db, sslmode='require')\n",
+    "        cursor = conn.cursor()\n",
+    "        cursor.execute(query_sql)\n",
+    "        conn.commit()\n",
+    "        print(f\"Adding {item} to bingolist.\")\n",
+    "        if(conn):\n",
+    "            cursor.close()\n",
+    "            conn.close()\n",
+    "            print(\"Cursor Closed\")\n",
+    "    except psycopg2.errors.UniqueViolation:\n",
+    "        print(\"auuuugh\")\n",
+    "bingoadd(\"duh\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "7dada687",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| key | \n",
+      "ADHD is overdiagnosed, \n",
+      "dopamine wild card baby, \n",
+      "object permanence, \n",
+      "Ugh, neurotypicals, \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "guild_name = '/r/ADHD'\n",
+    "query_sql = f\"\"\"SELECT DISTINCT key\n",
+    "FROM public.bingolist \n",
+    "WHERE server = '{guild_name}'\n",
+    ";\"\"\"\n",
+    "conn = psycopg2.connect(db, sslmode='require')\n",
+    "cursor = conn.cursor()\n",
+    "cursor.execute(query_sql)\n",
+    "records = cursor.fetchall()\n",
     "\n",
-    "bingoadd(\"hello world\")"
+    "record_string = '| '\n",
+    "col_list = [desc[0] for desc in cursor.description]\n",
+    "for col in col_list:\n",
+    "    record_string += str(col) + ' | '\n",
+    "record_string += '\\n'\n",
+    "\n",
+    "for row in records:\n",
+    "    rowvals = ''\n",
+    "    for item in row:\n",
+    "        rowvals += str(item) + ', '\n",
+    "    record_string += rowvals + '\\n'\n",
+    "print(record_string)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "a433dc84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.close()\n",
+    "cursor.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "122f62d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id\n",
+      "server\n",
+      "key\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in col_list:\n",
+    "    print(col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "3a5514c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "database connected\n",
+      "(6, 'barbiclebeanbot', 'duh')\n",
+      "(7, 'barbiclebeanbot', 'EmmaIsAMoron')\n",
+      "(9, 'barbiclebeanbot', 'helloWorld')\n",
+      "(15, 'barbiclebeanbot', 'duhhhh2')\n",
+      "rows retrieved\n",
+      "(log) Bingo list includes...  duh\n",
+      " EmmaIsAMoron\n",
+      " helloWorld\n",
+      " duhhhh2\n",
+      "\n",
+      "**Bingo list includes:** ``` duh\n",
+      " EmmaIsAMoron\n",
+      " helloWorld\n",
+      " duhhhh2\n",
+      "```\n"
+     ]
+    }
+   ],
+   "source": [
+    "guild_name = 'barbiclebeanbot'\n",
+    "query_sql = f\"\"\"\n",
+    "SELECT * \n",
+    "FROM public.bingolist\n",
+    "WHERE server = '{guild_name}'\n",
+    ";\"\"\"\n",
+    "\n",
+    "conn = psycopg2.connect(db, sslmode='require')\n",
+    "cursor = conn.cursor()\n",
+    "cursor.execute(query_sql)\n",
+    "records = cursor.fetchall()\n",
+    "print(\"database connected\")\n",
+    "record_string = \"\"\n",
+    "for row in records:\n",
+    "    print(row)\n",
+    "    record_string += \" \" + str(row[2]) + \"\\n\"\n",
+    "print(\"rows retrieved\")\n",
+    "print(f\"(log) Bingo list includes... {record_string}\")\n",
+    "print(f\"**Bingo list includes:** ```{record_string}```\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b3c6fee",
+   "id": "9650d739",
    "metadata": {},
    "outputs": [],
    "source": []
