--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "7dada687",
+   "id": "9e1a896d",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a433dc84",
+   "id": "a694b3b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "122f62d2",
+   "id": "d7b899a9",
    "metadata": {},
    "outputs": [
     {
@@ -169,8 +169,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "3a5514c2",
+   "execution_count": 60,
+   "id": "b63527da",
    "metadata": {},
    "outputs": [
     {
@@ -178,20 +178,20 @@
      "output_type": "stream",
      "text": [
       "database connected\n",
-      "(6, 'barbiclebeanbot', 'duh')\n",
-      "(7, 'barbiclebeanbot', 'EmmaIsAMoron')\n",
-      "(9, 'barbiclebeanbot', 'helloWorld')\n",
-      "(15, 'barbiclebeanbot', 'duhhhh2')\n",
+      "(1, '/r/ADHD', 'Ugh, neurotypicals')\n",
+      "(2, '/r/ADHD', 'object permanence')\n",
+      "(4, '/r/ADHD', 'ADHD is overdiagnosed')\n",
+      "(5, '/r/ADHD', 'dopamine wild card baby')\n",
       "rows retrieved\n",
-      "(log) Bingo list includes...  duh\n",
-      " EmmaIsAMoron\n",
-      " helloWorld\n",
-      " duhhhh2\n",
+      "(log) Bingo list includes...  Ugh, neurotypicals\n",
+      " object permanence\n",
+      " ADHD is overdiagnosed\n",
+      " dopamine wild card baby\n",
       "\n",
-      "**Bingo list includes:** ``` duh\n",
-      " EmmaIsAMoron\n",
-      " helloWorld\n",
-      " duhhhh2\n",
+      "**Bingo list includes:** ``` Ugh, neurotypicals\n",
+      " object permanence\n",
+      " ADHD is overdiagnosed\n",
+      " dopamine wild card baby\n",
       "```\n"
      ]
     }
@@ -201,7 +201,6 @@
     "query_sql = f\"\"\"\n",
     "SELECT * \n",
     "FROM public.bingolist\n",
-    "WHERE server = '{guild_name}'\n",
     ";\"\"\"\n",
     "\n",
     "conn = psycopg2.connect(db, sslmode='require')\n",
@@ -220,8 +219,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "id": "fbb37058",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['this', ' that', ' the other thing']\n"
+     ]
+    }
+   ],
+   "source": [
+    "st = \"this, that, the other thing\"\n",
+    "\n",
+    "print(st.split(','))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "7ec10c3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You said: asdfsadf, link.com\n",
+      "asdfsadf  link.com\n",
+      "connecting to database\n",
+      "Cursor Closed\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'ctx' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUndefinedColumn\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-58-0ceb18be7067>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m   \u001b[0mcursor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m   \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery_sql\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m   \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUndefinedColumn\u001b[0m: column \"link\" of relation \"current_game\" does not exist\nLINE 1: INSERT INTO public.current_game (bingo_key, link)\n                                                    ^\n",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-58-0ceb18be7067>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m   \u001b[0;32mawait\u001b[0m \u001b[0mctx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{key} has already been found!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m   \u001b[0;32mawait\u001b[0m \u001b[0mctx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Error inserting value to database\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m   \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ctx' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "content = \"asdfsadf, link.com\"\n",
+    "print(f\"You said: {content}\")\n",
+    "msg = content.split(',')\n",
+    "key = msg[0]\n",
+    "link = msg[1]\n",
+    "print(key, link)\n",
+    "query_sql = f\"\"\"INSERT INTO public.current_game (bingo_key, link)\n",
+    "VALUES ('{key}', '{link}');\"\"\"\n",
+    "try:\n",
+    "  print(\"connecting to database\")\n",
+    "  conn = psycopg2.connect(db, sslmode='require')\n",
+    "  cursor = conn.cursor()\n",
+    "  cursor.execute(query_sql)\n",
+    "  conn.commit()\n",
+    "  await ctx.send(f\"Added {key} with link {link} to current game.\")\n",
+    "except psycopg2.errors.UniqueViolation:\n",
+    "  await ctx.send(f\"{key} has already been found!\")\n",
+    "except:\n",
+    "  await ctx.send(\"Error inserting value to database\")\n",
+    "finally:\n",
+    "  if(conn):\n",
+    "    cursor.close()\n",
+    "    conn.close()\n",
+    "    print(\"Cursor Closed\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9650d739",
+   "id": "a8f29bd5",
    "metadata": {},
    "outputs": [],
    "source": []
