--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "9e1a896d",
+   "id": "c497e25a",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a694b3b2",
+   "id": "08d3123c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "d7b899a9",
+   "id": "550b4872",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "b63527da",
+   "id": "a042d9b0",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "fbb37058",
+   "id": "401a0134",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "7ec10c3f",
+   "id": "347aadbe",
    "metadata": {},
    "outputs": [
     {
@@ -298,8 +298,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "id": "5f7af308",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_dictator():\n",
+    "  role_list = ['@everyone', 'Bingo Dictator', 'peasant']\n",
+    "  roles = set(role_list)\n",
+    "  if \"Bingo Dictator\" in roles :\n",
+    "    return True\n",
+    "  else: \n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "d694dee7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_dictator()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a8f29bd5",
+   "id": "a9cfb370",
    "metadata": {},
    "outputs": [],
    "source": []
