--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "c497e25a",
+   "id": "a613dbcc",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "08d3123c",
+   "id": "b28abef9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "550b4872",
+   "id": "2b04e8a7",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "a042d9b0",
+   "id": "456c94e5",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "401a0134",
+   "id": "51dd92f8",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "347aadbe",
+   "id": "d3438f0c",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "5f7af308",
+   "id": "5567cf87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "d694dee7",
+   "id": "a3357c8e",
    "metadata": {},
    "outputs": [
     {
@@ -335,8 +335,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "id": "2fab105e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you're the dictator\n"
+     ]
+    }
+   ],
+   "source": [
+    "if check_dictator() == True:\n",
+    "    print(\"you're the dictator\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a9cfb370",
+   "id": "a6ed9286",
    "metadata": {},
    "outputs": [],
    "source": []
