--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "a613dbcc",
+   "id": "931f462c",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b28abef9",
+   "id": "6a410722",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "2b04e8a7",
+   "id": "038a707b",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "456c94e5",
+   "id": "5ad310b1",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "51dd92f8",
+   "id": "708975ec",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "d3438f0c",
+   "id": "fca6870b",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "5567cf87",
+   "id": "ffc4fa03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "a3357c8e",
+   "id": "a8ed01f9",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "2fab105e",
+   "id": "5d934b82",
    "metadata": {},
    "outputs": [
     {
@@ -354,8 +354,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "id": "1ae0fad2",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-66-6ed173fab0a1>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-66-6ed173fab0a1>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    roleset = {<Role id=832687676297576519 name='@everyone'>, <Role id=832800013532528670 name='Bingo Dictator'>}\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "roleset = {<Role id=832687676297576519 name='@everyone'>, <Role id=832800013532528670 name='Bingo Dictator'>}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a6ed9286",
+   "id": "54feef9e",
    "metadata": {},
    "outputs": [],
    "source": []
