try string split again

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -373,8 +373,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "54feef9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "testAgain\n"
+     ]
+    }
+   ],
+   "source": [
+    "item = '.bingoadd testAgain'\n",
+    "print(item.split('.bingoadd ')[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f87e4d2b",
    "metadata": {},
    "outputs": [],
    "source": []
